--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -44,7 +44,16 @@
             android:id="@+id/input_search"
             android:background="@null"
             android:hint="Enter Address, City or Zipcode"/>
-
     </RelativeLayout>
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/relLayout1"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/ic_my_location"
+        android:id="@+id/ic_my_location"
+        android:scaleType="center"/>
 
 </RelativeLayout>
