--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -64,7 +64,15 @@
             map:uiZoomControls="true"
             map:uiZoomGestures="true"/>
     </RelativeLayout>
-
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="10dp"
+        android:text="Click me"
+        android:id="@+id/btn_options"
+        android:layout_marginStart="10dp"/>
+<!--        android:layout_alignParentStart="true"/>-->
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
