--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -64,6 +64,10 @@
             map:uiZoomControls="true"
             map:uiZoomGestures="true"/>
     </RelativeLayout>
+    <androidx.fragment.app.FragmentContainerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_container_view"/>
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="40dp"
         android:layout_height="40dp"
