--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,90 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MapsActivity">
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/linearLayout1">
+        android:layout_height="match_parent">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:elevation="10dp"
-            android:background="#fff"
-            android:id="@+id/relLayout1">
-            <androidx.appcompat.widget.Toolbar
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/linearLayout1">
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/toolbar"
-                android:background="@color/common_google_signin_btn_text_dark_default"
-                />
-            <ProgressBar
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:elevation="10dp"
+                android:background="#fff"
+                android:id="@+id/relLayout1">
+                <androidx.appcompat.widget.Toolbar
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:id="@+id/toolbar"
+                    android:background="@color/common_google_signin_btn_text_dark_default"
+                    />
+                <ProgressBar
+                    android:layout_width="match_parent"
+                    android:id="@+id/progress_bar"
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="-7dp"
+                    android:layout_marginBottom="-7dp"
+                    />
+            </RelativeLayout>
+            <ViewAnimator
+                android:id="@+id/view_animator"
                 android:layout_width="match_parent"
-                android:id="@+id/progress_bar"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="-7dp"
-                android:layout_marginBottom="-7dp"
-                />
-        </RelativeLayout>
-        <ViewAnimator
-            android:id="@+id/view_animator"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_below="@+id/relLayout1"
-            android:layout_alignStart="@+id/relLayout1"
-            android:layout_alignEnd="@+id/relLayout1"
-            android:background="#FFF"
-            android:elevation="10dp"
-            android:visibility="gone">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_view"
+                android:layout_height="200dp"
+                android:layout_below="@+id/relLayout1"
+                android:layout_alignStart="@+id/relLayout1"
+                android:layout_alignEnd="@+id/relLayout1"
+                android:background="#FFF"
+                android:elevation="10dp"
+                android:visibility="gone">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#FFFFFF"
+                    />
+            </ViewAnimator>
+            <androidx.fragment.app.FragmentContainerView xmlns:map="http://schemas.android.com/apk/res-auto"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:id="@+id/mapView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#FFFFFF"
-                />
-        </ViewAnimator>
-        <androidx.fragment.app.FragmentContainerView xmlns:map="http://schemas.android.com/apk/res-auto"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:id="@+id/mapView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:elevation="5dp"
-            map:cameraBearing="112.5"
-            map:cameraZoom="13"
-            map:mapType="normal"
-            map:uiCompass="true"
-            map:uiRotateGestures="true"
-            map:uiScrollGestures="true"
-            map:uiTiltGestures="true"
-            map:uiZoomControls="true"
-            map:uiZoomGestures="true"/>
-    </RelativeLayout>
-    <androidx.fragment.app.FragmentContainerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/fragment_container_view"/>
-    <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="10dp"
-        android:text="Click me"
-        android:id="@+id/btn_options"
-        android:layout_marginStart="10dp"/>
-<!--        android:layout_alignParentStart="true"/>-->
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="10dp"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/ic_my_location"
-        android:id="@+id/ic_my_location"
-        android:scaleType="center"/>
+                android:elevation="5dp"
+                map:cameraBearing="112.5"
+                map:cameraZoom="13"
+                map:mapType="normal"
+                map:uiCompass="true"
+                map:uiRotateGestures="true"
+                map:uiScrollGestures="true"
+                map:uiTiltGestures="true"
+                map:uiZoomControls="true"
+                map:uiZoomGestures="true"/>
+        </RelativeLayout>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="10dp"
+            android:text="Click me"
+            android:id="@+id/btn_options"
+            android:layout_marginStart="10dp"/>
+        <!--        android:layout_alignParentStart="true"/>-->
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="10dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_my_location"
+            android:id="@+id/ic_my_location"
+            android:scaleType="center"/>
 
-</RelativeLayout>
+    </RelativeLayout>
+    <include layout="@layout/bottom_sheet"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
