--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -76,7 +76,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="60dp"
             android:layout_marginEnd="10dp"
-            android:text="Click me"
+            android:text="@string/app_compat_button"
             android:id="@+id/btn_options"
             android:layout_marginStart="10dp"/>
         <!--        android:layout_alignParentStart="true"/>-->
