commented out view buttons for future use

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -92,7 +92,8 @@
             android:scaleType="center"/>
 
     </RelativeLayout>
-
+    <!-- uncomment to add map views -->
+    <!--
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -124,5 +125,6 @@
                 android:text="Hybrid" />
         </LinearLayout>
     </LinearLayout>
+    -->
     <include layout="@layout/bottom_sheet"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
