--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -71,14 +71,51 @@
                 map:uiZoomControls="true"
                 map:uiZoomGestures="true"/>
         </RelativeLayout>
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="40dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="65dp"
             android:layout_marginEnd="10dp"
-            android:text="Click me"
-            android:id="@+id/btn_options"
-            android:layout_marginStart="10dp"/>
+            android:layoutDirection="ltr"
+            android:id="@+id/facilities_buttons_layout">
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingEnd="@dimen/list_item_spacing_quarter"
+                android:paddingStart="@dimen/list_item_spacing_quarter"
+                android:id="@+id/btn_options_restaurant"
+                android:text="Restaurant"
+                android:textSize="@dimen/list_item_text_size"
+                android:layout_marginStart="10dp"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingEnd="@dimen/list_item_spacing_quarter"
+                android:paddingStart="@dimen/list_item_spacing_quarter"
+                android:id="@+id/btn_options_carpark"
+                android:textSize="@dimen/list_item_text_size"
+                android:text="Car park"
+                android:layout_marginStart="10dp"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingEnd="@dimen/list_item_spacing_quarter"
+                android:paddingStart="@dimen/list_item_spacing_quarter"
+                android:id="@+id/btn_options_petro_station"
+                android:textSize="@dimen/list_item_text_size"
+                android:text="Petro Station"
+                android:layout_marginStart="10dp"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingEnd="@dimen/list_item_spacing_quarter"
+                android:paddingStart="@dimen/list_item_spacing_quarter"
+                android:id="@+id/btn_options_hospital"
+                android:textSize="@dimen/list_item_text_size"
+                android:text="Hospital"
+                android:layout_marginStart="10dp"/>
+
+        </LinearLayout>
         <!--        android:layout_alignParentStart="true"/>-->
         <ImageView
             android:layout_width="40dp"
