added FilterFragment and edited xml

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -69,7 +69,8 @@
                 map:uiScrollGestures="true"
                 map:uiTiltGestures="true"
                 map:uiZoomControls="true"
-                map:uiZoomGestures="true"/>
+                map:uiZoomGestures="true"
+                tools:layout="@layout/activity_maps" />
         </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
