--- a/app/src/main/res/layout/fragment_nearby_facilities_list_list_item.xml
+++ b/app/src/main/res/layout/fragment_nearby_facilities_list_list_item.xml
@@ -12,8 +12,6 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="3dp"
         app:cardCornerRadius="1dp">
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,6 +69,19 @@
                         android:textSize="13sp" />
 
                 </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:background="#f5f5f5"
+                android:gravity="center">
+
+                <com.github.ivbaranov.mfb.MaterialFavoriteButton
+                    android:layout_width="wrap_content"
+                    android:id="@+id/favoriteButton"
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
