--- a/app/src/main/res/layout/activity_facility_detail.xml
+++ b/app/src/main/res/layout/activity_facility_detail.xml
@@ -64,7 +64,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="left"
                             android:padding="10dp"
-                            android:text="Place Name"
+                            android:text="@string/facility_place_name"
                             android:textColor="#fff"
                             android:textSize="18sp" />
 
@@ -85,7 +85,7 @@
                                 android:layout_gravity="center"
                                 android:layout_marginRight="5dp"
                                 android:padding="5dp"
-                                android:text="5"
+                                android:text="@string/rating_view"
                                 android:textColor="#fff"
                                 android:textSize="14sp"
                                 android:textStyle="bold" />
@@ -111,7 +111,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:padding="5dp"
-                            android:text="Place Address"
+                            android:text="@string/place_address"
                             android:textColor="#fff"
                             android:textSize="14sp" />
 
