--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -115,38 +115,41 @@
                 android:textSize="@dimen/list_item_text_size"
                 android:text="@string/hospital"
                 android:layout_marginStart="10dp"/>
-
         </LinearLayout>
-        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <!--
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/constraint"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:paddingStart='16dp'
+            android:paddingTop='100dp'
+            android:gravity="start"
             tools:context=".FilterFragment">
             <Button
                 android:id="@+id/is_open_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="184dp"
-                android:text="@string/is_open_button"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.198" />
-
-            <Button
-                android:id="@+id/rating_filter_button"
+                app:layout_constraintVertical_bias="0.198"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/rating_view"
+                android:layout_marginEnd="4dp"
+                android:text="@string/is_open_button"/>
+            <Button
+                android:id="@+id/rating_filter_button"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/is_open_button"
                 app:layout_constraintHorizontal_bias="0.666"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.198" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_constraintVertical_bias="0.198"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/rating_view" />
+
+        </LinearLayout>-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
