--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -2,10 +2,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:paddingStart = '16dp'
+    android:paddingStart='16dp'
     android:paddingTop='100dp'
-    android:gravity="start">
+    android:gravity="start"
+    tools:context=".FilterFragment">
     <Button
         android:id="@+id/is_open_button"
         app:layout_constraintBottom_toBottomOf="parent"
