changed height values to push buttons up

--- a/app/src/main/res/layout/fragment_nearby_facilities_list_list.xml
+++ b/app/src/main/res/layout/fragment_nearby_facilities_list_list.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="300dp"
     android:clipToPadding="false"
+    android:layout_gravity="bottom"
     android:paddingTop="@dimen/list_item_spacing_half"
     android:paddingBottom="@dimen/list_item_spacing_half"
     tools:context=".NearbyFacilitiesListFragment"
