--- a/app/src/main/res/layout/fragment_emergency_contacts.xml
+++ b/app/src/main/res/layout/fragment_emergency_contacts.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-<!--    tools:context=".EmergencyContactsFragment">-->
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".EmergencyContactsFragment">
 
     <ImageView
         android:id="@+id/appLogo"
