--- a/app/src/main/res/layout/activity_emergency_contact.xml
+++ b/app/src/main/res/layout/activity_emergency_contact.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EmergencyContactsActivity">
+    tools:context=".views.EmergencyContactsActivity">
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
         android:name="androidx.navigation.fragment.NavHostFragment"
