--- a/app/src/main/res/layout/activity_facility_detail.xml
+++ b/app/src/main/res/layout/activity_facility_detail.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".FacilityDetailsActivity">
+    tools:context=".views.FacilityDetailsActivity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
