--- a/app/src/main/res/layout/register_user.xml
+++ b/app/src/main/res/layout/register_user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".RegisterUserActivity">
+    tools:context=".views.RegisterUserActivity">
 
 
     <EditText
@@ -21,6 +21,7 @@
         android:padding="10dp"
         android:textColorHint="@color/grey_dark"
         android:textSize="16sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +39,8 @@
         android:hint="@string/email_field_text"
         android:padding="10sp"
         android:textColorHint="@color/grey_dark"
-        android:textSize="16dp"
+        android:textSize="16sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,6 +60,7 @@
         android:padding="10dp"
         android:textColorHint="@color/grey_dark"
         android:textSize="16sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,6 +79,7 @@
         android:padding="10dp"
         android:textColorHint="@color/grey_dark"
         android:textSize="16sp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
