--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="red_light">#FB9CA2</color>
     <color name="grey_light">#F6F6F6</color>
     <color name="grey_dark">#BDBDBD</color>
+    <color name="grey_darkest">#2f3133</color>
 </resources>
