Fix layout for call screen icons

--- a/app/src/main/res/layout/activity_emergency_message.xml
+++ b/app/src/main/res/layout/activity_emergency_message.xml
@@ -8,7 +8,7 @@
     tools:context=".views.EmergencyMessageActivity">
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/callingText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
@@ -21,98 +21,34 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/policeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/police_number_text"
         android:textColor="@color/white"
         android:textSize="55sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintBottom_toTopOf="@+id/calling_icons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/callingText"
         app:layout_constraintVertical_bias="0.04" />
 
-    <ImageView
-        android:id="@+id/mute"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="60dp"
-        android:src="@drawable/ic_mute"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/keypad"
-        app:layout_constraintHorizontal_bias="0.325"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.441" />
 
     <ImageView
-        android:id="@+id/keypad"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/calling_icons"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/ic_keypad"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        android:layout_marginBottom="24dp"
+        android:layout_marginTop="80dp"
+        android:src="@drawable/calling_screen"
+        app:layout_constraintBottom_toTopOf="@+id/circle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.397" />
-
-
-    <ImageView
-        android:id="@+id/speaker"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="right"
-        android:src="@drawable/ic_speaker"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.35"
-        app:layout_constraintStart_toEndOf="@+id/keypad"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.441" />
-
-    <ImageView
-        android:id="@+id/add_call"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="350dp"
-        android:src="@drawable/ic_add_call"
-        app:layout_constraintBottom_toTopOf="@+id/end_call_button"
-        app:layout_constraintEnd_toStartOf="@+id/video_call"
-        app:layout_constraintHorizontal_bias="0.305"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.192" />
-
-    <ImageView
-        android:id="@+id/video_call"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/ic_video_call"
-        app:layout_constraintBottom_toTopOf="@+id/end_call_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.675" />
-
-    <ImageView
-        android:id="@+id/hold_call"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="right"
-        android:src="@drawable/ic_hold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.328"
-        app:layout_constraintStart_toEndOf="@+id/video_call"
-        app:layout_constraintTop_toBottomOf="@+id/speaker"
-        app:layout_constraintVertical_bias="0.202" />
+        app:layout_constraintTop_toBottomOf="@+id/callingText"
+        app:layout_constraintVertical_bias="0.766" />
 
     <Button
         android:id="@+id/end_call_button"
@@ -129,7 +65,7 @@
         app:layout_constraintVertical_bias="0.855" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/circle"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
