--- a/app/src/main/res/layout/fragment_add_emergency_contact.xml
+++ b/app/src/main/res/layout/fragment_add_emergency_contact.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:backgroundTint="@null"
     tools:context=".views.AddEmergencyContactFragment">
 
     <ImageView
@@ -44,6 +45,7 @@
         android:padding="10dp"
         android:textColorHint="@color/grey_dark"
         android:textSize="16sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,6 +66,7 @@
         android:padding="10dp"
         android:textColorHint="@color/grey_dark"
         android:textSize="16sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,6 +87,7 @@
         android:padding="10dp"
         android:textColorHint="@color/grey_dark"
         android:textSize="16sp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
