Make buttons darker and smaller

--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:paddingStart='4dp'
+    android:layout_gravity="center_horizontal"
     tools:context="views.FilterFragment">
     <Button
         android:id="@+id/is_open_button"
@@ -12,13 +13,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.198"
-        app:itemBackground="@color/red"
+        app:itemBackground="@color/red_dark"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
-        android:backgroundTint="#E24752"
+        android:backgroundTint="@color/red_dark"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginEnd="10dp"
+        android:padding="4dp"
+        android:textSize="11sp"
+        android:textStyle="bold"
         android:text="@string/is_open_button"/>
     <Button
         android:id="@+id/rating_filter_button"
@@ -28,11 +32,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.198"
-        app:itemBackground="@color/red"
+        app:itemBackground="@color/red_dark"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
-        android:backgroundTint="#E24752"
+        android:backgroundTint="@color/red_dark"
+        android:padding="4dp"
+        android:textSize="11sp"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:text="@string/rating_view" />
 </LinearLayout>
