Make buttons smaller

--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -13,10 +13,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.198"
-        app:itemBackground="@color/red_dark"
+        app:itemBackground="@color/red"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
-        android:backgroundTint="@color/red_dark"
+        android:backgroundTint="@color/red"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginEnd="10dp"
@@ -32,10 +32,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.198"
-        app:itemBackground="@color/red_dark"
+        app:itemBackground="@color/red"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
-        android:backgroundTint="@color/red_dark"
+        android:backgroundTint="@color/red"
         android:padding="4dp"
         android:textSize="11sp"
         android:textStyle="bold"
